--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.1.5",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "qrcode-svg": "^1.1.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.4.3",
