--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/parser": "^5.56.0",
+    "@vite-pwa/astro": "^0.1.2",
     "astro-eslint-parser": "^0.13.2",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
