--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.8.2",
     "@astrojs/rss": "^3.0.0",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^3.0.8",
@@ -19,7 +20,8 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.4.3",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@astrojs/react": "^3.0.0",
